--- a/index.html
+++ b/index.html
@@ -7,30 +7,75 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap 5.1.3 | CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <!-- Bootstrap Icons 1.8.1 | CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
+  <!-- THP Movies' Lair | Home brewed CSS file -->
+  <link rel="stylesheet" href="./thpmovieslair.css" />
   <title>The THP Movies' Lair</title>
 </head>
 
-<body>
-  <header>HEADER - Nothing here yet</header>
-  <main class="d-flex flex-column justify-content-center">
+<body class=" d-flex flex-column min-vh-100">
+
+  <header>
+    <div class="m-0 text-white rock-header" id="myRockHeader">
+      <h1 class="m-2">THE THP MOVIES' LAIR</h1>
+      <h4 class="fst-italic mx-2">Where all cinephiles end digging...</h4>
+    </div>
+  </header>
+
+  <main class="d-flex flex-column justify-content-center mb-auto">
+
     <section id="searchZone"
-      class="col-10 d-flex justify-content-center bg-light mx-auto my-2 p-2 border border-1 rounded-pill">
+      class="col-10 d-flex justify-content-between bg-light mx-auto m-0 p-2 border border-1 rounded-pill">
       <input type="text" name="searchBox" id="searchBox"
         placeholder="Please, type in some key words regarding the movie you're looking for..."
-        class="col-10 ms-2 px-2 border-0 rounded-pill">
-      <i class="bi bi-search-heart col-1 text-center fs-3 me-2 px-2 bg-white border-0 rounded-pill"
+        class="col-11 m-0 px-2 border-0 rounded-pill-start">
+      <i class="bi bi-search-heart col-1 text-end fs-3 m-0 pe-3 bg-white border-0 rounded-pill-end"
         id="searchButton"></i>
     </section>
+
     <section id="displayZone"
       class="col-10 d-flex flex-column justify-content-center bg-light mx-auto my-2 p-2 border border-1 rounded">
       This is where the result of your search should show... At some point...
     </section>
+
+    <section id="myPopUpSection" class="d-none flex-column justify-content-center bg-white rounded">
+      <div class="d-flex flex-column justify-content-center">
+        <div class="d-flex justify-content-between rounded-top bg-light border border-1">
+          <h2 class="m-0 p-2 g-0 fw-bold">Déjà repu(e) de gras et de sucre ?</h2>
+          <p class="m-0 p-2 g-0"><i id="closeCross" class="bi bi-x-circle fs-3"></i></p>
+        </div>
+        <div class="d-flex flex-column rounded-bottom bg-light border border-1">
+          <p class="text-center my-2 mx-3">Avant de partir, laissez-nous donc vos coordonnées qu'on reste en contact</p>
+          <p class="text-center my-2 mx-3"><input type="email" class="form-control" placeholder="E-mail" /></p>
+          <p class="text-center my-2 mx-3"><input type="button" class="btn btn-primary" id="closeButton"
+              value="Fermer la fenêtre" /></p>
+        </div>
+      </div>
+    </section>
+
   </main>
-  <footer>
-    <p class="">FOOTER - Nothing here below neither</p>
+
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top mt-auto">
+
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+        <svg class="bi" width="30" height="24">
+          <use xlink:href="#bootstrap" />
+        </svg>
+      </a>
+      <span class="text-muted">&copy; 2022 VIDAL Jean-Baptiste for THP Developer Winter 2022</span>
+    </div>
+
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex me-5">
+      <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-twitter"></i></a></li>
+      <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-twitch"></i></a></li>
+      <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-instagram"></i></a></li>
+      <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-meta"></i></a></li>
+      <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-discord"></i></a></li>
+    </ul>
+
   </footer>
 
   <!-- Bootstrap 5.1.3 | JavaScript Bundle with Popper -->
